입력값의 허용 범위 늘리기 및 테스트코드 완성